añadiendo imagenes y diseño al index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <title>M primera pagina web</title>
 </head>
 <body>
+  <!--aqui inicia el navbar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Covid-App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,16 +23,53 @@
       </form>
     </div>
   </nav>
+  <!--aqui finaliza navbar-->
+  <!--aqui inicia jumbotron-->
   <div class="jumbotron">
     <h1 class="display-4"></h1>
-    <p class="lead">Esta es una materia de Noveno semestre</p>
+    <p class="lead">Esta es la aplicación para identificar las variantes del covid-19</p>
     <hr class="my-4">
     <p>Para mas informacion dale click al boton</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="https://fup.edu.co/" role="button">ir a fup</a>
     </p>
   </div>
+  <!--aqui finaliza jumbotron-->
+  <!--aqui inicia cards-->
+  <div class="card-group">
+    <div class="card">
+      <img class="card-img-top" src="/Img/variante1/img1.jpeg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Variante1</h5>
+        <p class="card-text">Aqui esta la descripción de la variante 1 covid-19.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="/Img/variante2/img2.jpeg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Variante 2 covid-19</h5>
+        <p class="card-text">Aqui esta la descripción de la variante 2 covid-19.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="Img/variante3/img3.jpeg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Variante 3 covid-19</h5>
+        <p class="card-text">Aqui esta la descripción de la variante 3 covid-19.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
 
+  <!--aqui finaliza cards-->
 </body>
 
 
