añadiendo nuevos diseños a las paginas de variantes

--- a/index.html
+++ b/index.html
@@ -31,29 +31,32 @@
     <hr class="my-4">
     <p>Para mas informacion dale click al boton</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="https://fup.edu.co/" role="button">ir a fup</a>
+      <a class="btn btn-primary btn-lg" href="#" role="button">ir a menu principal</a>
     </p>
   </div>
   <!--aqui finaliza jumbotron-->
   <!--aqui inicia cards-->
   <div class="card-group">
     <div class="card">
-      <img class="card-img-top" src="/Img/variante1/img1.jpeg" alt="Card image cap">
+      <img class="card-img-top" src="Img/variante1/img1.jpeg" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Variante1</h5>
+        <h5 class="card-title">Variante1 covid 19</h5>
         <p class="card-text">Aqui esta la descripción de la variante 1 covid-19.</p>
       </div>
       <div class="card-footer">
+        <a class="btn btn-primary btn-lg" href="variante1.html" role="button">ir a variante 1</a>
         <small class="text-muted">Last updated 3 mins ago</small>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="/Img/variante2/img2.jpeg" alt="Card image cap">
+
+      <img class="card-img-top" src="Img/variante2/img2.jpeg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Variante 2 covid-19</h5>
         <p class="card-text">Aqui esta la descripción de la variante 2 covid-19.</p>
       </div>
       <div class="card-footer">
+        <a class="btn btn-primary btn-lg" href="variante2.html" role="button">ir a variante 2</a>
         <small class="text-muted">Last updated 3 mins ago</small>
       </div>
     </div>
@@ -64,6 +67,7 @@
         <p class="card-text">Aqui esta la descripción de la variante 3 covid-19.</p>
       </div>
       <div class="card-footer">
+        <a class="btn btn-primary btn-lg" href="variante3.html" role="button">ir a variante 3</a>
         <small class="text-muted">Last updated 3 mins ago</small>
       </div>
     </div>
