--- a/variante3.html
+++ b/variante3.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="card bg-dark text-white">
+        <img class="card-img" src="Img/variante3/img3.jpeg" alt="Card image">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Variante 3 covid 19</h5>
+          <p class="card-text">Esta es la imagen correspondiente a la variable Beta de covid 19</p>
+          <p class="card-text">covid-19 Beta</p>
+          <a class="btn btn-primary btn-lg" href="index.html" role="button">ir a Menu Principal</a>
+        </div>
+      </div>
 </body>
 </html>
